--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Jost:wght@700&family=Lato&family=Open+Sans:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-header.css">
+    <link rel="stylesheet" href="style-main.css">
+    <link rel="stylesheet" href="style-section+footer.css">
     <link rel="stylesheet" href="media-style.css">
     <!-- <link rel="stylesheet" href="style-mobile.css"> -->
     <title>Document</title>
