--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <p class="header-text-first">PrimeCRM - SaaS Website Template</p>
             <p class="header-text-second">PrimeCRM is an elegant, trendy, and cleanly designed SaaS Webflow template. Well-planned layouts with a clear structure support your saas business growth to a more significant level with uncompromising quality in various aspects.</p>
         </div>
-        <div class="big-image">
-            <div class="left-image">
-                <img src="img/Rectangle.png" alt="">
-            </div>
-            <div class="right-image">
-                <img src="img/image 3.png" alt="">
-            </div>
+        <div class="overall-image">
+            <!-- <div class="left-image"> -->
+                <img class="left-image" src="img/Rectangle.jpg" alt="">
+            <!-- </div> -->
+            <!-- <div class="right-image"> -->
+                <img class="right-image" src="img/image 3.png" alt="">
+            <!-- </div> -->
         </div>
         
             <div class="CRM-left">CRM</div>
@@ -40,7 +40,7 @@
         
     </header>
     <main>
-        <div class="main-div">
+        <!-- <div class="main-div"> -->
             <div class="left-main-div">
                 <div class="left-main-div-VF">
                     <img class='V' src="img/Image.png" alt="">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
             </div>
-        </div>
+        <!-- </div> -->
     </main>
     <section>
         <div class="images">
