--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <p class="header-text-second">PrimeCRM is an elegant, trendy, and cleanly designed SaaS Webflow template. Well-planned layouts with a clear structure support your saas business growth to a more significant level with uncompromising quality in various aspects.</p>
         </div>
         <div class="overall-image">
+            <div class="overall-image-2">
                 <img class="left-image" src="img/Rectangle.jpg" alt="">
+            </div>
                 <img class="right-image" src="img/image 3.png" alt="">
         </div>
             <div class="CRM-left">CRM</div>
@@ -97,6 +99,7 @@
     <section>
         <div class="images">
             <h1>Images</h1>
+            <div class="pexels-uniplash">
             <div class="pexels">
                 <div class="pexels-block">
                     <img src="img/pexels.svg" alt="" class="pexels-logo">
@@ -114,21 +117,24 @@
                     the images for free on <a target="_blank" class="unsplash-link-mini" href="https://unsplash.com/">Unsplash</a></p>
             </div>
         </div>
+        </div>
         <div class="fonts-jost">
             <h1>Fonts</h1>
-                <div class="opensans">
-                    <div class="opensans-block">
-                        <img src="img/Vector (2).svg" alt="" class="opensans-logo">
-                        <a href="https://fonts.google.com/specimen/Open+Sans" target="_blank" class="opensans-link">Open Sans</a>
+                <div class="opensans-jost">
+                    <div class="opensans">
+                        <div class="opensans-block">
+                            <img src="img/Vector (2).svg" alt="" class="opensans-logo">
+                            <a href="https://fonts.google.com/specimen/Open+Sans" target="_blank" class="opensans-link">Open Sans</a>
+                        </div>
+                        <p class="opensans-text">PrimeCRM - SaaS Website Template uses free licensed <a target="_blank" class="opensans-link-mini" href="https://fonts.google.com/">Google Fonts.</a></p>
                     </div>
-                    <p class="opensans-text">PrimeCRM - SaaS Website Template uses free licensed <a target="_blank" class="opensans-link-mini" href="https://fonts.google.com/">Google Fonts.</a></p>
-                </div>
-                <div class="jost">
-                    <div class="jost-block">
-                        <img src="img/Vector (2).svg" alt="" class="jost-logo">
-                        <a href="https://fonts.google.com/specimen/Open+Sans" target="_blank" class="jost-link">Jost</a>
+                    <div class="jost">
+                        <div class="jost-block">
+                            <img src="img/Vector (2).svg" alt="" class="jost-logo">
+                            <a href="https://fonts.google.com/specimen/Open+Sans" target="_blank" class="jost-link">Jost</a>
+                        </div>
+                        <p class="jost-text">PrimeCRM - SaaS Website Template uses free licensed <a target="_blank" class="jost-link-mini" href="https://fonts.google.com/">Google Fonts.</a></p>
                     </div>
-                    <p class="jost-text">PrimeCRM - SaaS Website Template uses free licensed <a target="_blank" class="jost-link-mini" href="https://fonts.google.com/">Google Fonts.</a></p>
                 </div>
         </div>
     </section>
@@ -138,6 +144,6 @@
         </p>
     </footer>
 </div>
-<script src="kek.js"></script>
+<script src="check.js"></script>
 </body>
 </html>
