--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style-header.css">
     <link rel="stylesheet" href="style-main.css">
     <link rel="stylesheet" href="style-section+footer.css">
-    <link rel="stylesheet" href="media-style.css">
+    <link rel="stylesheet" href="media-style 768+px.css">
+    <link rel="stylesheet" href="media-style 410+px.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,9 +28,10 @@
         </div>
         <div class="overall-image">
             <div class="overall-image-2">
-                <img class="left-image" src="img/Rectangle.jpg" alt="">
+                <img class="left-image" src="img-png/Rectangle.jpg" alt="">
+                <img class="right-image" src="img-png/image 3.jpg" alt="">
+                <button class="btn-switch"></button>
             </div>
-                <img class="right-image" src="img/image 3.png" alt="">
         </div>
             <div class="CRM-left">CRM</div>
             <div class="CRM-right">CRM</div>
