--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Jost:wght@700&family=Lato&family=Open+Sans:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Jost:wght@400;500;700&family=Lato&family=Open+Sans:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style-header.css">
     <link rel="stylesheet" href="style-main.css">
     <link rel="stylesheet" href="style-section+footer.css">
@@ -18,6 +18,19 @@
 <body>
     <div class="container">
     <header>
+        <nav class="nav">
+            <ul>
+                <li>Features</li>
+                <li>Managers</li>
+                <li>Client</li>
+                <li>Blog</li>
+                <li>Login</li>
+            </ul>
+
+            <div class="burger">
+                <span></span>
+            </div>
+        </nav>
         <div class="header-title">
             <img class='img-logo' src="img/Logo.png" alt="/">
             <h1 class="h1-title">PrimeCRM</h1>
